--- a/client/style.css
+++ b/client/style.css
@@ -384,13 +384,7 @@ html, body {
   height: 100%;
   display: block;
   cursor: crosshair;
-  background: 
-    linear-gradient(45deg, #f9fafb 25%, transparent 25%),
-    linear-gradient(-45deg, #f9fafb 25%, transparent 25%),
-    linear-gradient(45deg, transparent 75%, #f9fafb 75%),
-    linear-gradient(-45deg, transparent 75%, #f9fafb 75%);
-  background-size: 20px 20px;
-  background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+  background: #ffffff;
 }
 
 #canvas:active {
